project-1/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxDeployment
  labels:
    app: nginxDeployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginxDeploymentPod
  template:
    metadata:
      labels:
        app: nginxDeploymentPod
    spec:
      containers:
        - name: nginx-deployment-pod-conatiner
          image: nginx
          ports:
            - containerPort: 80
