project-1/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    http:
      paths:
        - path: /app
          pathType: Prefix
          backend:
            service:
              name: for-nginx-pod
              port:
                number: 30007 #clusterip port
